["plantuml", "02_classClusterSingletonService", "svg"]

------------
@startuml

interface "AutoCloseable" as auto {
  +void close();
}

interface "ClusterSingletonService" as csService {
  +void instantiateServiceInstance();
  +ListenableFuture<Void> closeServiceInstance();
  +String getServiceGroupIdentifier();
}

interface "ClusterSingletonServiceRegistration" as cssRegistration {
}

interface "ClusterSingletonServiceProvider" as cssProvider {
  +ClusterSingletonServiceRegistration registerClusterSingletonService(ClusterSingletonService);
}

cssProvider --|> auto
cssRegistration --|> auto


@enduml
------------
